# role_inheritance_detective

./: act_secretfile.sample  docker-compose.yml
.agent/workflows/: init_node.md  restart_docker.md  start_dev_server.md  test_api.md
.github/scripts/code-review/: index.ts  package.json  prompt_template.md
.github/workflows/: code-review.yml
scripts/ai/: api_test.sh
scripts/docker/: docker_down_build_up.sh
scripts/worker/: init_node.sh  init_node_on_local.sh  uvicorn_dev_up.sh
target_dir/: database_role.csv  database_role_inheritance.csv  detail.csv  functional_role.csv  functional_role_inheritance.csv  master.csv  relation.csv
target_dir/infra/common_snowflake/: database_role.tf  schema.tf  variables.tf
target_dir/infra/snowflake_database_role/: variables.tf
target_dir/params/: access_role.csv  access_role_grant.csv  access_role_inheritance.csv  functional_access_role_inheritance.csv  relation.csv
target_dir/terraform/common_snowflake/: database.tf  database_role.tf
target_dir/terraform/snowflake_database_role/: database_role.tf  privillage.tf
worker_lambda/: .gitignore  Dockerfile  main.py  pyproject.toml  pyrightconfig.json
worker_lambda/config/: __init__.py  settings.py
worker_lambda/templates/: init.cipher  init.cipher.j2  test.j2
worker_lambda/usecase/: init.py
worker_lambda/utils/: parse.py
