[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "worker-lambda"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.120.4",
    "jinja2>=3.1.6",
    "neo4j>=6.0.2",
    "python-hcl2>=7.3.1",
    "uvicorn>=0.38.0",
]

[tool.setuptools]
package-dir = {"worker_lambda" = "."}
packages = ["worker_lambda", "worker_lambda.usecase", "worker_lambda.config"]

[tool.pyright]
typeCheckingMode = "basic"
include = ["main.py"]
exclude = ["**/__pycache__", ".venv"]

[tool.pylance]
typeCheckingMode = "basic"
